hphp/test/zend/good/zend-traits/bug60145.php.exp
HipHop Fatal error: Interfaces cannot use traits in hphp/test/zend/good/zend-traits/bug60145.php on line 8
