hphp/test/zend/good/zend-traits/bug60145.php
<?php

trait foo {

}

interface MyInterface {
	use foo;

	public function b();

}